--- a/components/Team/Team.module.css
+++ b/components/Team/Team.module.css
@@ -120,6 +120,7 @@
   box-shadow: var(--mantine-shadow-sm);
   height: 100%;
   min-height: 180px;
+  aspect-ratio: 1/1;
 }
 
 .executiveImageGradient {
