--- a/components/TrustedBy/TrustedBy.module.css
+++ b/components/TrustedBy/TrustedBy.module.css
@@ -1,30 +1,62 @@
+.wrapper {
+  background: linear-gradient(135deg, rgba(99, 102, 241, 0.02) 0%, rgba(168, 85, 247, 0.02) 100%);
+  border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
+  border-bottom: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
+}
+
+.badge {
+  background: linear-gradient(135deg, var(--mantine-color-blue-0) 0%, var(--mantine-color-indigo-0) 100%);
+  color: var(--mantine-color-blue-7);
+  border: 1px solid var(--mantine-color-blue-2);
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: rem(11px);
+  letter-spacing: 1px;
+}
+
 .title {
   font-family: 'Greycliff CF', var(--mantine-font-family);
-  font-size: rem(32px);
+  font-size: rem(36px);
   font-weight: 900;
   line-height: 1.1;
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    font-size: rem(28px);
+  }
 }
 
 .description {
-  max-width: rem(500px);
-  margin: 0 auto;
+  font-size: rem(18px);
+  line-height: 1.6;
+  color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-2));
 }
 
-.logoWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: rem(90px);
-  opacity: 0.85;
-  transition: opacity 200ms ease;
+.trustFactor {
+  flex: 1;
+  min-width: rem(200px);
+  max-width: rem(250px);
 
-  @mixin hover {
-    opacity: 1;
+  @media (max-width: $mantine-breakpoint-md) {
+    min-width: rem(150px);
   }
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
+  @media (max-width: $mantine-breakpoint-sm) {
+    flex-basis: calc(50% - rem(30px));
   }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    flex-basis: 100%;
+  }
+}
+
+.icon {
+  margin: 0 auto;
+  background: linear-gradient(135deg, var(--mantine-color-blue-0) 0%, var(--mantine-color-indigo-0) 100%);
+  color: var(--mantine-color-blue-7);
+  border: 1px solid var(--mantine-color-blue-2);
+}
+
+.factorLabel {
+  color: light-dark(var(--mantine-color-gray-9), var(--mantine-color-gray-1));
 } 
